[tool.poetry]
name = "prefix-reverse-dns-lookup"
version = "0.1.0"
description = ""
authors = ["Mike Bell"]
readme = "README.md"
packages = [{include = "prefix_reverse_dns_lookup", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
